[gd_scene load_steps=14 format=2]

[ext_resource path="res://images/characters/character_4/SuperStart.png" type="Texture" id=1]
[ext_resource path="res://images/characters/character_4/SuperStrip.png" type="Texture" id=2]
[ext_resource path="res://assets/zeta_assets/EpsilonSuper.gd" type="Script" id=3]
[ext_resource path="res://images/characters/character_4/SuperEnd.png" type="Texture" id=4]
[ext_resource path="res://assets/zeta_assets/SuperEnd.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 520, 340 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 340, 520, 340 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 316.667

[node name="EpsilonSuper" type="Node2D"]
modulate = Color( 1, 1, 1.5, 1 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 3 )

[node name="SuperStart" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="EndPosition" type="Position2D" parent="SuperStart"]
position = Vector2( 120, 0 )

[node name="Path" type="Sprite" parent="SuperStart/EndPosition"]
position = Vector2( -3.33333, -38.3334 )
texture = ExtResource( 2 )
centered = false

[node name="PathHurtBox" type="Area2D" parent="SuperStart/EndPosition/Path"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuperStart/EndPosition/Path/PathHurtBox"]
position = Vector2( 5, 40 )
shape = SubResource( 4 )

[node name="SuperEnd" type="KinematicBody2D" parent="SuperStart/EndPosition"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 4
collision_mask = 6
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SuperStart/EndPosition/SuperEnd"]
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuperStart/EndPosition/SuperEnd"]
position = Vector2( 53.3333, 0 )
scale = Vector2( 1, 0.8 )
shape = SubResource( 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="SuperStart/EndPosition/SuperEnd"]
position = Vector2( -93.3333, 0 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 200, 0 )
collide_with_bodies = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SuperTime" type="Timer" parent="."]
one_shot = true

[node name="Damager" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="SuperStart/EndPosition/Path/PathHurtBox" to="." method="_on_PathHurtBox_body_entered"]
[connection signal="screen_entered" from="SuperStart/EndPosition/SuperEnd/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="SuperStart/EndPosition/SuperEnd/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SuperTime" to="." method="_on_SuperTime_timeout"]
[connection signal="timeout" from="Damager" to="." method="_on_Damager_timeout"]
